fix(optimizedp code for WorkCards): eliminated img size and container size making them the same on all devices changing only the gap this way project covers are always large and only the gap between cards changes from device to device

--- a/src/Components/Atoms/WorkCards/WorkCards.scss
+++ b/src/Components/Atoms/WorkCards/WorkCards.scss
@@ -9,13 +9,13 @@
   width: 100%;
 
   &-L {
-    gap: 25.57rem;
+    gap: 24rem;
   }
   &-M {
-    gap: 21.82rem;
+    gap: 20rem;
   }
   &-S {
-    gap: 20.94rem;
+    gap: 16rem;
   }
 
   .project-card:nth-child(even) {
@@ -26,19 +26,8 @@
     display: flex;
     flex-direction: column;
     gap: $gap-1;
-
-    &-L {
-      width: 28.32rem;
-      height: 20.56rem;
-    }
-    &-M {
-      width: 20.31rem;
-      height: 12.5rem;
-    }
-    &-S {
-      width: 15.94rem;
-      height: 10rem;
-    }
+    width: 32rem;
+    height: 24rem;
 
     .img-container {
       img {
